--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "jsonfile": "^2.1.0",
     "klaw": "^1.0.0",
     "path-is-absolute": "^1.0.0",
-    "rimraf": "^2.2.8"
+    "rimraf": "git+https://github.com/Rise-Vision/rimraf.git"
   },
   "devDependencies": {
     "coveralls": "^2.11.2",
